<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.example.ananias.mctcsurvey.ResultsActivity">

    <LinearLayout
        android:id="@+id/results_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/results_text"/>

        <TextView
            android:id="@+id/answer_1_results_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            tools:text="Yes: Results"/>

        <TextView
            android:id="@+id/answer_2_results_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            tools:text="No: Results"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/results_layout"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignRight="@+id/results_layout"
        android:layout_alignEnd="@+id/results_layout"/>

</RelativeLayout>
